// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-doCyfw hYJVFt"
>
  <div
    className="sc-jVZirl jjvdiL"
  >
    <div
      className="sc-jmhOSl cdWXcY"
    >
      <div
        className="sc-cbDwiu mxFYN"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jbOfQH ijsTjO"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-deiPdS izsIcU"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-doCyfw ckQara"
>
  <div
    className="sc-jVZirl jjvdiL"
  >
    <div
      className="sc-jmhOSl cdWXcY"
    >
      <div
        className="sc-cbDwiu mxFYN"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jbOfQH ijsTjO"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-deiPdS izsIcU"
  >
    <span>
      <button
<<<<<<< HEAD
        className="sc-jmhOSl efklXr"
=======
        className="sc-eqKtKx kVNEMb"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dDaJoQ dqCRYK"
        />
      </button>
    </span>
    <span>
      <button
<<<<<<< HEAD
        className="sc-jmhOSl iqgLsM"
=======
        className="sc-eqKtKx oytqc"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dDaJoQ dqCRYK"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-doCyfw hYJVFt"
>
  <div
    className="sc-jVZirl uVSPy"
  >
    <div
      className="sc-jbOfQH eVIwhM"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-deiPdS izsIcU"
    >
      <button
<<<<<<< HEAD
        className="sc-jmhOSl jkJwDM"
=======
        className="sc-eqKtKx dwPcUo"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-dDaJoQ dqCRYK"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-doCyfw cNUaov"
>
  <div
    className="sc-jVZirl jjvdiL"
  >
    <div
      className="sc-jmhOSl cdWXcY"
    >
      <div
        className="sc-cbDwiu mxFYN"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jbOfQH ijsTjO"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-deiPdS izsIcU"
  >
    <span>
      <button
<<<<<<< HEAD
        className="sc-jmhOSl efklXr"
=======
        className="sc-eqKtKx kVNEMb"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dDaJoQ dqCRYK"
        />
      </button>
    </span>
    <span>
      <button
<<<<<<< HEAD
        className="sc-jmhOSl iqgLsM"
=======
        className="sc-eqKtKx oytqc"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dDaJoQ dqCRYK"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-doCyfw cNUaov"
  >
    <div
      className="sc-jVZirl jjvdiL"
    >
      <div
        className="sc-jmhOSl cdWXcY"
      >
        <div
          className="sc-cbDwiu mxFYN"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-jbOfQH ijsTjO"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-deiPdS izsIcU"
    >
      <span>
        <button
<<<<<<< HEAD
          className="sc-jmhOSl efklXr"
=======
          className="sc-eqKtKx kVNEMb"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </span>
      <span>
        <button
<<<<<<< HEAD
          className="sc-jmhOSl iqgLsM"
=======
          className="sc-eqKtKx oytqc"
>>>>>>> 1b794d7d29292ea9c9c441f3c26feec14606b3a2
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-dDaJoQ dqCRYK"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-doCyfw hYJVFt"
>
  <div
    className="sc-jVZirl jjvdiL"
  >
    <div
      className="sc-jmhOSl cdWXcY"
    >
      <div
        className="sc-cbDwiu mxFYN"
      >
        Title here
      </div>
      <div
        className="sc-hZiMVj jdogDM"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-jbOfQH ijsTjO"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
